# copilot-kit-example

./: Makefile
backend/: .env.example  .gitignore  langgraph.json  main.py  pyproject.toml  pyrightconfig.json
backend/src/agents/test/: agent.py
backend/src/agents/test_agent/: agent.py
backend/src/core/: env.py
frontend/: .env.example  .npmrc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: dev.py
