[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
  "copilotkit>=0.1.85",
  "fastapi[standard]>=0.135.3",
  "langchain-core>=1.2.27",
  "langchain-openai>=1.1.12",
  "langgraph>=1.1.6",
  "langgraph-cli[inmem]>=0.4.21",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = ["ruff>=0.15.9", "taskipy>=1.14.1"]

[tool.taskipy.tasks]
lint = "ruff check . --fix"
format = "ruff format ."
check = "ruff format . && ruff check . --fix"
dev = "uvicorn main:app --reload --host 127.0.0.1 --port 8000"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "single"
